# koun

./: .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix  justfile
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql  0002_fsrs_only.sql  0003_fsrs_settings.sql  0004_card_audio.sql  0005_card_type.sql  0006_card_directions.sql  0007_daily_counters.sql  0008_daily_counter_targets.sql
backend/src/: app.rs  auth_middleware.rs  config.rs  db.rs  embedded_web.rs  error.rs  lib.rs  llm.rs  logging.rs  main.rs  models.rs  scheduling.rs
backend/src/routes/: auth.rs  cards.rs  mod.rs  reviews.rs  settings.rs  stats.rs  translations.rs
backend/web_build/: index.html
flutter/: pubspec.yaml
flutter/android/: local.properties
flutter/android/app/: build.gradle.kts
flutter/android/app/src/dev/res/values/: strings.xml
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/example/koun/: MainActivity.kt
flutter/android/app/src/main/kotlin/com/matmoal/koun/: MainActivity.kt
flutter/android/app/src/prod/res/values/: strings.xml
flutter/lib/: main.dart
flutter/lib/src/: api.dart  card_audio_player.dart  card_audio_player_io.dart  card_audio_player_stub.dart  card_audio_player_web.dart  home_shell.dart  models.dart  theme.dart
flutter/lib/src/views/: add_card_view.dart  learn_view.dart  login_view.dart  settings_view.dart
flutter/web/: index.html  manifest.json
migrations/: 20250417124207_init.sql
nix/: toolchain.nix
scripts/: release.py
src/: lib.rs  main.rs
src/routes/: cards.rs
tests/: api.rs
