[package]
name = "koun"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread" , "signal"] }
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tracing = "0.1"
